# master-thesis

./: .gitignore  README.md
cpred_optimized/CPred/: MANIFEST.in  README.md  pyproject.toml  requirements.txt
cpred_optimized/CPred/CPred/: CPred_NN.py  CPred_main.py  FeatureEngineering.py  fix_cpred.py
cpred_optimized/CPred/CPred.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
cpred_optimized/CPred/CPred/Data/: Unimod_modifications.xlsx
cpred_optimized/CPred/CPred/predictions/: benchmark_balanced_CPred.csv  peptides_CPred.csv
cpred_optimized/CPred/img/: CPred_logo.tif
cpred_optimized/CPred/tests/: tests.py
cpred_optimized/CPred/tests/tests_input/: test.parquet  test.xlsx
cpred_optimized/CPred/tests/tests_output/: Model_predictions.csv
deepdetect/DeepDetect/: DeepDigest_Trypsin.h5
deepdetect/SourceCode/bilstm_training/: data_coding.py  model_training_bilstm.py  plot_loss_acc.py
deepdetect/SourceCode/deepdetect_pred/: BiLSTM_Trypsin.h5  BiLSTM_Trypsin.json  in_silico_digestion.py  main.py  predictor.py  predictor.py.backup  read_fasta.py
environments/: cpred_optimized_env.yml  deepdetect_env.yml  deepms_env.yml  digest_env.yml  ms2pip_env.yml  unipept_env.yml
peptide_selection_pipeline/: basic_properties.py  in_silico_digest.py  in_silico_digest_fasta.py  peptide_selection.py  peptides2cpredinput.py  peptides2ms2pipinput.py  peptides2txt.py  retrieve_cpred_preds.py  retrieve_dd_preds.py  retrieve_dmp_preds.py  retrieve_ms2pip_preds.py  retrieve_ms2pip_preds_optimized.py  retrieve_unipept.py
(+3 files in other folders)
